511-dkhptd-manifests/020-worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dkhptd-worker
spec:
  # replicas: 1 # auto-scaling
  selector:
    matchLabels:
      app: dkhptd-worker
  template:
    metadata:
      labels:
        app: dkhptd-worker
    spec:
      containers:
        - name: dkhptd-worker
          image: tuana9a/dkhptd-worker:2024.09.29.025049
          command: ["node", "./dist/launch-worker-rabbitmq-v1.js"]
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "200m"
