511-dkhptd-manifests/05-mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: dkhptd
spec:
  replicas: 0
  serviceName: internal
  selector:
    matchLabels:
      app: mongo
      internal: "1"
  template:
    metadata:
      labels:
        app: mongo
        internal: "1"
    spec:
      containers:
        - name: mongo
          image: mongo:4.4
          command:
            - mongod
            - "--config"
            - "/etc/mongod.conf"
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
            - name: mongo-config
              mountPath: /etc/mongod.conf
              subPath: mongod.conf
          ports:
            - containerPort: 27017
      volumes:
        - name: mongo-config
          configMap:
            name: mongo-conf
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        storageClassName: nfs567
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
