511-dkhptd-manifests/05-rabbitmq.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: dkhptd
spec:
  replicas: 1
  serviceName: internal
  selector:
    matchLabels:
      app: rabbitmq
      internal: "1"
  template:
    metadata:
      labels:
        app: rabbitmq
        internal: "1"
    spec:
      hostname: rabbitmq
      containers:
        - name: rabbitmq
          image: rabbitmq:3.12-management
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq/mnesia
          ports:
            - containerPort: 5672
            - containerPort: 15672
  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-data
      spec:
        storageClassName: nfs-vdb
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
