511-dkhptd-manifests/25-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dkhptd-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dkhptd-scheduler
  template:
    metadata:
      labels:
        app: dkhptd-scheduler
    spec:
      containers:
        - name: dkhptd-scheduler
          image: tuana9a/dkhptd-scheduler:2025.09.18.094718
          resources:
            requests:
              memory: "50Mi"
              cpu: "10m"
            limits:
              memory: "100Mi"
