511-dkhptd-manifests/30-worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dkhptd-worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dkhptd-worker
  template:
    metadata:
      labels:
        app: dkhptd-worker
    spec:
      containers:
        - name: dkhptd-worker
          image: tuana9a/dkhptd-worker:2024.09.29.025049
          command: ["node", "./dist/launch-worker-rabbitmq-v1.js"]
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "200m"
---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: dkhptd-worker
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: dkhptd-worker
#   minReplicas: 1
#   maxReplicas: 10
#   metrics:
#     - type: Resource
#       resource:
#         name: cpu
#         target:
#           type: Utilization
#           averageUtilization: 80
