511-dkhptd-manifests/31-tkb-parser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dkhptd-thoi-khoa-bieu-parser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dkhptd-thoi-khoa-bieu-parser
  template:
    metadata:
      labels:
        app: dkhptd-thoi-khoa-bieu-parser
    spec:
      containers:
        - name: dkhptd-thoi-khoa-bieu-parser
          image: tuana9a/dkhptd-thoi-khoa-bieu-parser:2025.08.05.022451
          resources:
            requests:
              memory: "50Mi"
              cpu: "10m"
            limits:
              memory: "1000Mi"
