511-dkhptd-manifests/005-db-v3.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-v3
  namespace: dkhptd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-v3
  template:
    metadata:
      labels:
        app: mongo-v3
    spec:
      containers:
        - name: mongo
          image: mongo:7.0
          command:
            - mongod
            - "--config"
            - "/etc/mongod.conf"
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
            - name: mongo-config
              mountPath: /etc/mongod.conf
              subPath: mongod.conf
          ports:
            - containerPort: 27017
      volumes:
        - name: mongo-config
          configMap:
            name: dkhptd-mongo-v3-conf
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        storageClassName: nfs-vdb
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-v3
  namespace: dkhptd
  labels:
    app: mongo-v3
spec:
  clusterIP: None
  ports:
    - port: 27017
      name: mongo
  selector:
    app: mongo-v3
