511-dkhptd-manifests/005-db.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: dkhptd
spec:
  serviceName: "mongo"
  replicas: 0
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:5.0
          command:
            - mongod
            - "--config"
            - "/etc/mongod.conf"
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
            - name: mongo-config
              mountPath: /etc/mongod.conf
              subPath: mongod.conf
          ports:
            - containerPort: 27017
      volumes:
        - name: mongo-config
          configMap:
            name: dkhptd-mongo-conf
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        storageClassName: nfs-client
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: dkhptd
  labels:
    app: mongo
spec:
  ports:
    - port: 27017
      name: mongo
  clusterIP: None
  selector:
    app: mongo
