511-dkhptd-manifests/005-mq-v2.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq-v2
  namespace: dkhptd
spec:
  replicas: 0
  serviceName: rabbitmq-v2
  selector:
    matchLabels:
      app: rabbitmq-v2
  template:
    metadata:
      labels:
        app: rabbitmq-v2
    spec:
      hostname: rabbitmq
      containers:
        - name: rabbitmq
          image: rabbitmq:3.12-management
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq/mnesia
          ports:
            - containerPort: 5672
            - containerPort: 15672
  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-data
      spec:
        storageClassName: longhorn
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-v2
  namespace: dkhptd
  labels:
    app: rabbitmq-v2
spec:
  ports:
    - port: 5672
      name: amqp
    - port: 15672
      name: management
  clusterIP: None
  selector:
    app: rabbitmq-v2
