511-dkhptd-manifests/08-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal
  namespace: dkhptd
spec:
  clusterIP: None
  ipFamilyPolicy: SingleStack
  selector:
    internal: "1"
