511-dkhptd-manifests/20-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 0
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: tuana9a/dkhptd-api-gateway:2025.10.20.235208
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "100Mi"
---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: api-gateway
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: api-gateway
#   minReplicas: 1
#   maxReplicas: 5
#   metrics:
#     - type: Resource
#       resource:
#         name: cpu
#         target:
#           type: Utilization
#           averageUtilization: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dkhptd
#   annotations:
#     cert-manager.io/cluster-issuer: "letsencrypt-production"
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
#     nginx.ingress.kubernetes.io/proxy-body-size: "10m" # for upload tkb xlsx
# spec:
#   ingressClassName: nginx
#   tls:
#     - hosts:
#         - dkhptd-api.tuana9a.com
#       secretName: dkhptd-api-tuana9a-com-tls
#   rules:
#     - host: dkhptd-api.tuana9a.com
#       http:
#         paths:
#           - pathType: Prefix
#             path: "/"
#             backend:
#               service:
#                 name: api-gateway
#                 port:
#                   number: 8080
