511-dkhptd-manifests/010-api-gateway.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dkhptd-api-gateway
spec:
  # replicas: 1 # auto-scaling
  selector:
    matchLabels:
      app: dkhptd-api-gateway
  template:
    metadata:
      labels:
        app: dkhptd-api-gateway
    spec:
      containers:
        - name: dkhptd-api-gateway
          image: tuana9a/dkhptd-api-gateway:2024.09.29.034130
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "100Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: dkhptd-api-gateway
spec:
  selector:
    app: dkhptd-api-gateway
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dkhptd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: "dkhptd-api.tuana9a.com"
    external-dns.alpha.kubernetes.io/target: "parkingx.tuana9a.com"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dkhptd-api.tuana9a.com
      secretName: dkhptd-api-tuana9a-com-tls
  rules:
    - host: dkhptd-api.tuana9a.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: dkhptd-api-gateway
                port:
                  number: 8080
